# simpleNetEngine

./: .gitignore  CMakeLists.txt  PlatformMarco.h  imgui.ini  readme.md  todo.md
UnitTest/: TestGuiApp.cpp  TestGuiApp.h  TestGuiMain.cpp  TestMain.cpp  TestNetSession.cpp  TestNetSession.h
_DemoApp1/: Main.cpp  SimpleNetApp.cpp  SimpleNetApp.h  SimpleNetAppSession.cpp  SimpleNetAppSession.h  SimpleSocketServer.cpp  SimpleSocketServer.h
_DemoApp2/: CMakeLists.txt
_DemoApp2/src/: App2Main.cpp  Demo2AppPacket.cpp  Demo2AppPacket.h  DemoApp2.cpp  DemoApp2.h  DemoApp2Session.cpp  DemoApp2Session.h
doc/: cpp_note.md  design_note.md  fix.md  qna.md  question.md  todo.md  vcpkg_note.md
script/: build.sh  gen_prj.sh  gen_vs2019.bat  gen_xcode_prj.sh  install_vcpkg.bat  install_vcpkg.sh  list_package.sh  test.bat  test.sh
